# cookiecutter-python-library-github

./: README.md  cookiecutter.json  tox.ini
.github/workflows/: validation.yml
hooks/: post_gen_project.py
tests/: test_bake_project.py
{{cookiecutter.github_repo_name}}/: LICENSE  pyproject.toml  tox.ini
{{cookiecutter.github_repo_name}}/.github/workflows/: documentation.yml  publication.yml  validation.yml
{{cookiecutter.github_repo_name}}/docs/: conf.py  index.rst
{{cookiecutter.github_repo_name}}/src/{{cookiecutter.package_name}}/: __init__.py
{{cookiecutter.github_repo_name}}/tests/: conftest.py  test_{{cookiecutter.package_name}}.py
